WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
235493
[GStreamer] C++20 warnings
https://bugs.webkit.org/show_bug.cgi?id=235493
Summary
[GStreamer] C++20 warnings
Philippe Normand
Reported
2022-01-23 07:12:56 PST
/app/webkit/Source/WebCore/platform/graphics/gstreamer/mse/AppendPipeline.cpp:456:26: warning: ISO C++20 considers use of overloaded operator '!=' (with operand types 'GstIteratorAdaptor<_GstPad>::iterator' and 'GstIteratorAdaptor<_GstPad>::iterator') to be ambiguous despite there being a unique best viable function with non-reversed arguments [-Wambiguous-reversed-operator] for (GstPad* pad : GstIteratorAdaptor<GstPad>(GUniquePtr<GstIterator>(gst_element_iterate_src_pads(m_demux.get())))) { ^ /app/webkit/Source/WebCore/platform/graphics/gstreamer/GStreamerCommon.h:392:14: note: candidate function with non-reversed arguments bool operator!=(const iterator& other) { return !(*this == other); } ^ /app/webkit/Source/WebCore/platform/graphics/gstreamer/GStreamerCommon.h:388:14: note: ambiguous candidate function with reversed arguments bool operator==(const iterator& other) ^ /app/webkit/Source/WebCore/platform/graphics/gstreamer/mse/AppendPipeline.cpp:471:26: warning: ISO C++20 considers use of overloaded operator '!=' (with operand types 'GstIteratorAdaptor<_GstPad>::iterator' and 'GstIteratorAdaptor<_GstPad>::iterator') to be ambiguous despite there being a unique best viable function with non-reversed arguments [-Wambiguous-reversed-operator] for (GstPad* pad : GstIteratorAdaptor<GstPad>(GUniquePtr<GstIterator>(gst_element_iterate_src_pads(m_demux.get())))) { ^ /app/webkit/Source/WebCore/platform/graphics/gstreamer/GStreamerCommon.h:392:14: note: candidate function with non-reversed arguments bool operator!=(const iterator& other) { return !(*this == other); } ^ /app/webkit/Source/WebCore/platform/graphics/gstreamer/GStreamerCommon.h:388:14: note: ambiguous candidate function with reversed arguments bool operator==(const iterator& other) ^ 2 warnings generated.
Attachments
Patch
(1.86 KB, patch)
2022-01-23 08:25 PST
,
Philippe Normand
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2022-01-23 08:25:28 PST
Created
attachment 449749
[details]
Patch
Philippe Normand
Comment 2
2022-01-23 09:33:02 PST
***
Bug 235075
has been marked as a duplicate of this bug. ***
EWS
Comment 3
2022-01-23 11:29:02 PST
Committed
r288422
(
246313@main
): <
https://commits.webkit.org/246313@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 449749
[details]
.
Radar WebKit Bug Importer
Comment 4
2022-01-23 11:30:17 PST
<
rdar://problem/87944376
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug