[GStreamer] C++20 warnings https://bugs.webkit.org/show_bug.cgi?id=235493

Patch by Philippe Normand <pnormand@igalia.com> on 2022-01-23
Reviewed by Darin Adler.

Fix ambiguous-reversed-operator warnings. In C++20 comparison operators (like a == b) need
to be declared const, so that reverse comparisons (like b == a) also work as intended.

* platform/graphics/gstreamer/GStreamerCommon.h:
(GstIteratorAdaptor::iterator::operator== const):
(GstIteratorAdaptor::iterator::operator!= const):
(GstIteratorAdaptor::iterator::operator==): Deleted.
(GstIteratorAdaptor::iterator::operator!=): Deleted.


Canonical link: https://commits.webkit.org/246313@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@288422 268f45cc-cd09-0410-ab3c-d52691b4dbfc