Source/WebCore/platform/graphics/gstreamer/GStreamerCommon.h
@@ -385,11 +385,11 @@ public:
             return *this;
         }
 
-        bool operator==(const iterator& other)
+        bool operator==(const iterator& other) const
         {
             return m_iter == other.m_iter && m_done == other.m_done;
         }
-        bool operator!=(const iterator& other) { return !(*this == other); }
+        bool operator!=(const iterator& other) const { return !(*this == other); }
 
     private:
         GstIterator* m_iter;
